--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ python-dateutil==2.9.0.post0
 scipy==1.13.1
 six==1.17.0
 termcolor==2.5.0
+torch==2.6.0
 typing_extensions==4.12.2
 vec-noise==1.1.4
 zipp==3.21.0
